Risk object documentation and binary GLM example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(paf_ci)
 export(paf_ext)
 export(paf_ext_ci)
 export(risk_glm)
+importFrom(stats,delete.response)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,predict.glm)
+importFrom(stats,terms)
 importFrom(stats,vcov)
