--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,14 @@ export(paf_ci)
 export(paf_ext)
 export(paf_ext_ci)
 export(risk_glm)
+export(risk_pch)
+export(risk_survreg)
 importFrom(stats,delete.response)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,predict.glm)
 importFrom(stats,terms)
 importFrom(stats,vcov)
+importFrom(survival,strata)
+importFrom(survival,survreg.distributions)
+importFrom(survival,untangle.specials)
