Add piecewise constant hazards model with competing risks.
No unit tests done for this yet.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(paf)
 export(paf_ci)
 export(paf_ext)
 export(paf_ext_ci)
+export(risk_cr)
 export(risk_glm)
 export(risk_pch)
 export(risk_survreg)
