Added conservative PAF estimation routines.
No unit tests yet.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ModifyCategorical)
 export(TransitionSimple)
 export(VarMultinom)
+export(ci2se)
 export(paf)
 export(paf_ci)
 export(paf_ext)
@@ -10,6 +11,7 @@ export(paf_ext_ci)
 export(risk_cr)
 export(risk_glm)
 export(risk_pch)
+export(risk_relative)
 export(risk_survreg)
 importFrom(stats,delete.response)
 importFrom(stats,model.frame)
