Add manual risk function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(paf_ext)
 export(paf_ext_ci)
 export(risk_cr)
 export(risk_glm)
+export(risk_manual)
 export(risk_pch)
 export(risk_relative)
 export(risk_survreg)
